PF-176: Moved from TimeScaleDB to SQLite

--- a/app/templates/home/choose-project.html
+++ b/app/templates/home/choose-project.html
@@ -32,6 +32,8 @@
          </div>
     </main>
 
+    {% include 'includes/project-modal.html' %}
+
     <script>
         function setProject(projectId) {
             // Use the API client to set the active project
