--- a/app/templates/integrations/atlassian-jira.html
+++ b/app/templates/integrations/atlassian-jira.html
@@ -66,8 +66,8 @@
                                     </div>
                                     <label for="org_url" class="mt-2">Jira organization url:</label>
                                     {{ form.org_url(class="form-control") }}
-                                    <label for="project_id" class="mt-2">Project:</label>
-                                    {{ form.project_id(class="form-control") }}
+                                    <label for="jira_project_key" class="mt-2">Jira Project Key:</label>
+                                    {{ form.jira_project_key(class="form-control") }}
                                     <label for="epic_field" class="mt-2">Epic field (optional):</label>
                                     {{ form.epic_field(class="form-control") }}
                                     <label for="epic_name" class="mt-2">Epic name (optional):</label>
