--- a/app/templates/includes/scripts.html
+++ b/app/templates/includes/scripts.html
@@ -4,3 +4,4 @@
 <script src="/static/assets/js/sidebars.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
 <script src="/static/assets/js/api-client.js"></script>
+<script src="/static/assets/js/theme-switcher.js" defer></script>
